# BGFXTest

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  License3rdParties  README.md  azure-pipelines.yml  gltf_model_loader.cpp  vcpkg-configuration.json  vcpkg.json
.vcpkg/ports/bgfx/: portfile.cmake
.vcpkg/ports/bimg/: portfile.cmake
.vcpkg/ports/bx/: portfile.cmake
assets/: ExportFonts.bat  SK_Chr_BR_BigAlien_01.glb  VC.glb  compile-shaders-win.bat  default.cfg  dummies.gltf  gltfLoadTest.cfg  test.gltf  tload.cfg  xload.cfg
assets/blender/: SceneExplorerAssets.blend  SceneExplorerAssets.glb  physics_test.blend  test_func_group1.blend  untitled.blend
assets/fonts/Open_Sans/: Open_Sans_0_12.tga  Open_Sans_0_24.tga  Open_Sans_0_48.tga  Open_Sans_1_24.tga  Open_Sans_1_48.tga  Open_Sans_2_24.tga  Open_Sans_2_48.tga  Open_Sans_3_48.tga  Open_Sans_4_48.tga  Open_Sans_5_48.tga  Open_Sans_6_48.tga  Open_Sans_7_48.tga  Open_Sans_8_48.tga
assets/shaders/: animation.sh  bgfx_compute.sh  cs_multiple_scattering_lut.bin.hlsl  cs_multiple_scattering_lut.sc  f_simple.sc  fs_bae_textured_physical.sc  fs_debugRender.bin.hlsl  fs_debugRender.sc  fs_forward.bin.hlsl  fs_forward.sc  fs_swf.bin.hlsl  fs_swf.sc  fs_tonemap.sc  lights.sh  lights_punctual.sh  pbr.sh  samplers.sh  texCoord_transform.sh  v_simple.sc  varying.def.sc  vs_bae_textured_physical.sc  vs_debugRender.bin.hlsl  vs_debugRender.sc  vs_forward.bin.hlsl  vs_forward.sc  vs_swf.bin.hlsl  vs_swf.sc  vs_tonemap.sc
assets/strings/: english.lang
assets/swf/: Classes.7z  TextClickable3.as  clicktest.fla  clicktest.swf  clicktest2.swf  clicktest_2.swf  clicktest_ecma.swf  clicktest_script.swf  clicktest_simlpe.swf  edge.swf  empty.swf  hole_bug.swf  idStuff.natvis  kinterface.swf  line.swf  pig.swf  test.swf  test_ext.swf  test_text.swf
src/: MapFile.cpp  MapFile.h  main.cpp
src/bgfx-imgui/: imconfig.h  imgui_impl_bgfx.cpp  imgui_impl_bgfx.h
src/bgfx-stubs/: bgfxCallback.cpp  bgfxDebugRenderer.cpp  bgfxDebugRenderer.h  bgfxImage.cpp  bgfxImage.h  bgfxRender.cpp  bgfxRender.h  bgfxRenderer.cpp  bgfxRenderer.h  bgfxSamplers.h  cube_atlas.cpp  cube_atlas.h
src/bgfx-stubs/Font/: font_manager.h  text_buffer_manager.cpp  text_buffer_manager.h
src/bgfx-stubs/Renderers/: ForwardRenderer.cpp  ForwardRenderer.h  LightShader.cpp  LightShader.h  PBRShader.cpp  PBRShader.h
src/gltf-edit/: TextEditor.cpp  gltfAnimation.cpp  gltfAnimation.h  gltfCamera.cpp  gltfCamera.h  gltfEditor.cpp  gltfEditor.h  gltfExtras.cpp  gltfModel.cpp  gltfParser.cpp  gltfParser.h  gltfProperties.h
src/idFramework/: CVarSystem.cpp  CVarSystem.h  CmdSystem.cpp  CmdSystem.h  Common.cpp  Common.h  Compressor.cpp  Compressor.h  Console.h  EventLoop.cpp  EventLoop.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  Font.cpp  Font.h  KeyInput.cpp  KeyInput.h  Licensee.h  Session.cpp  Unzip.h  UsercmdGen.cpp
src/idFramework/async/: AsyncClient.cpp  AsyncClient.h  AsyncNetwork.cpp  AsyncNetwork.h  AsyncServer.cpp  AsyncServer.h  MsgChannel.cpp  NetworkSystem.cpp  ServerScan.cpp  ServerScan.h
src/idFramework/idImGui/: idImConsole.cpp  idImConsole.h
src/idFramework/idlib/: Base64.cpp  BitMsg.h  CmdArgs.cpp  Dict.cpp  Heap.cpp  Heap.h  LangDict.cpp  LangDict.h  Lexer.cpp  Lexer.h  Lib.cpp  Lib.h  MapFile.cpp  Parser.cpp  RectAllocator.cpp  Str.cpp  Str.h  Swap.h  Timer.cpp
src/idFramework/idlib/containers/: HashIndex.h  HashTable.h  List.h  Sort.h  StaticList.h
src/idFramework/idlib/geometry/: DrawVert.cpp  DrawVert.h  JointTransform.h  Surface.h  Surface_Patch.cpp  Surface_Patch.h  Surface_SweptSpline.cpp  TraceModel.cpp  Winding.cpp  Winding2D.cpp
src/idFramework/idlib/math/: Lcp.h  Math.cpp  Math.h  Matrix.cpp  Simd.cpp  Simd.h  Simd_Generic.cpp  Simd_Generic.h  Vector.cpp  Vector.h  VectorI.h
src/idFramework/minizip/: unzip.cpp
src/idFramework/stubs/: common_stubs.cpp  common_stubs.hpp  sys_stubs.hpp
src/idFramework/sys/: cpu.cpp  events.cpp  platform.h  sys_local.cpp  sys_local.h  sys_public.h  threads.cpp
src/idFramework/sys/win32/: SDL_win32_main.c  win_input.cpp  win_local.h  win_main.cpp  win_net.cpp  win_syscon.cpp
src/idFramework/sys/win32/rc/: RCa17392
src/idFramework/tools/RB/compilers/aas/: AASFile.cpp
src/quickJS/: Win32Console.c  Win32Console.h  Win32Time.cpp  libbf.h  quickjs-defs.h  quickjs.h  quickjspp.hpp
src/sdl-imgui/: imgui_impl_sdl.cpp  imgui_impl_sdl.h
src/swf/: SWF.h  SWF_Abc.cpp  SWF_Abc.h  SWF_Bitstream.cpp  SWF_Bitstream.h  SWF_Dictionary.cpp  SWF_Enums.h  SWF_EventDispatcher.cpp  SWF_EventDispatcher.h  SWF_Events.cpp  SWF_Image.cpp  SWF_Interpreter.cpp  SWF_Load.cpp  SWF_Main.cpp  SWF_Names.cpp  SWF_ParmList.cpp  SWF_ParmList.h  SWF_PlaceObject.cpp  SWF_Render.cpp  SWF_Render.h  SWF_ScriptFunction.cpp  SWF_ScriptFunction.h  SWF_ScriptObject.cpp  SWF_ScriptObject.h  SWF_ScriptVar.cpp  SWF_ScriptVar.h  SWF_ShapeParser.cpp  SWF_ShapeParser.h  SWF_Shapes.cpp  SWF_Sounds.cpp  SWF_SpriteInstance.cpp  SWF_SpriteInstance.h  SWF_Sprites.cpp  SWF_Sprites.h  SWF_Text.cpp  SWF_TextInstance.cpp  SWF_TextInstance.h  SWF_Types.h  SWF_Zlib.cpp  atom-inlines.h  (+2 more)
